--- a/style.css
+++ b/style.css
@@ -3,6 +3,13 @@
     border-radius: 15px;
     border: 2px solid #009933;
 }
+.con1{
+  background-image: url('img/opaybeyond.jpeg');
+  background-repeat: no-repeat;
+  transition: 2s;
+  background-size: 100% 100%;
+  height: 100vh;
+}
 .btn1{
     font-size: medium;
     font-weight: 700;
